--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Quicksand&display=swap");
 
 body {
   background-color: white;
@@ -7,6 +7,11 @@ body {
 
 h1 {
   font-size: 1.5em;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 li a {
@@ -109,7 +114,8 @@ header p a:hover {
   color: rgb(58, 109, 42);
 }
 
-.btn:hover, .btn a:hover{
+.btn:hover,
+.btn a:hover {
   background-color: rgb(76, 141, 54);
 }
 
@@ -118,7 +124,7 @@ header p a:hover {
   padding: 10px;
   box-sizing: border-box;
   margin: 0 auto;
-  background-color: inherit;
+  background-color: rgba(194, 128, 58, 0.1);
   margin: 0 auto;
   max-width: 1400px;
   display: flex;
@@ -129,7 +135,7 @@ header p a:hover {
   width: 435px;
 }
 
-.container .box-1 img{
+.container .box-1 img {
   width: 230px;
 }
 
@@ -139,13 +145,14 @@ header p a:hover {
 
 .container h2 {
   font-weight: bold;
-  margin: 10px;
-  font-size: 2em;
-  text-transform: capitalize;
+  margin: 12px;
+  font-family: "Gotham", "Poppins", sans-serif;
+  font-size: 1.7em;
+  text-transform: uppercase;
 }
 
 .container p {
-  margin: 10px;
+  margin: 12px;
   font-size: 1em;
   text-transform: capitalize;
   font-weight: 400;
@@ -155,4 +162,95 @@ header p a:hover {
   font-size: 1.3em;
   font-weight: bolder;
   float: right;
+}
+
+.mid-section {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.mid-section h2 {
+  font-weight: bolder;
+  margin: 3px 0;
+  font-family: "Quicksand", "Poppins", sans-serif;
+  font-size: 1.5em;
+  text-transform: capitalize;
+}
+
+.mid-section p {
+  margin: 3px 0;
+  font-size: 1em;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+.mid-section .box-3 {
+  width: 300px;
+}
+
+.mid-section .box-4 {
+  overflow: hidden;
+  width: 350px;
+  padding: 13px;
+  box-sizing: border-box;
+  font-weight: bolder;
+  font-family: "Quicksand";
+  box-shadow: 1px 5px 20px 10px #c7c9cc;
+}
+
+.mid-section .box-4 img {
+  width: 170px;
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
+
+.mid-section .box-4 form {
+  margin: 20px 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.mid-section .box-4 p {
+  font-family: inherit;
+  font-weight: bolder;
+}
+
+.mid-section .box-4 div input {
+  display: block;
+  border: none;
+  border-radius: 7px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
+  height: 30px;
+  margin: 10px;
+  width: 99%;
+  margin: 10px auto;
+}
+
+.mid-section .box-4 div input::placeholder {
+  font-size: 1em;
+  font-weight: 400;
+  padding-left: 10px;
+}
+
+.mid-section .box-4 button {
+  width: 80%;
+  display: block;
+  border: none;
+  background-color: rgb(102, 181, 76);
+  border-radius: 10px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bolder;
+  text-transform: uppercase;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.mid-section .box-4 button:hover,
+.mid-section .box-4 button:hover {
+  background-color: rgb(58, 109, 42) x;
 }
